--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IRSG RegSci - Regulatory Science Consulting</title>
+  <title>Innovative Regulatory Science Group</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .fade-in { animation: fadeIn 0.6s ease-out; }
@@ -56,10 +56,10 @@
           <div class="fade-in">
             <span class="inline-flex items-center rounded-full bg-green-50 text-green-600 px-3 py-1 text-sm font-medium">Regulatory-First Consulting</span>
             <h1 class="mt-4 text-4xl md:text-5xl font-extrabold leading-tight text-slate-900">
-              Rare Diseases. Niche Biologics. <span class="text-blue-800">Synthetic Biology.</span>
+              for Rare Diseases. Niche Biologics. <span class="text-blue-800">Synthetic Biology.</span>
             </h1>
             <p class="mt-4 text-lg text-slate-600 max-w-xl">
-              Innovative Regulatory Science Group (IRSG) accelerates approvals, reduces risk, and drives compliance — powered by our proprietary platform, <span class="font-semibold text-blue-800">RegPulse</span>.
+              Innovative Regulatory Science Group (IRSG) accelerates approvals, reduces risk, and drives compliance, powered by our proprietary platform, <span class="font-semibold text-blue-800">RegPulse</span>.
             </p>
             <div class="mt-8 flex flex-wrap gap-3">
               <button onclick="showPage('contact')" class="inline-flex items-center justify-center rounded-2xl px-5 py-3 font-semibold shadow-sm transition transform hover:-translate-y-0.5 bg-green-600 text-white hover:shadow-lg">Work With Us</button>
